--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my homepage!!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  kratkd
+github_username:  kratkyd
 
 # Build settings
 theme: minima
